# prompt-backend

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prometheus  EXECUTE_FIX.sh  FAULT_TOLERANCE.md  FAULT_TOLERANT_OUTBOX_IMPLEMENTATION.md  FIX_SUMMARY.md  GITHUB_TOKEN_INTEGRATION.md  MULTI_REPO_IMPLEMENTATION.md  NEXT_STEPS.md  NPM_PUBLISHING_FIX.md  NPM_PUBLISHING_INVESTIGATION.md  NPM_PUBLISHING_SOLUTION_SUMMARY.md  OAUTH_DEPLOYMENT_CHECKLIST.md  OUTBOX_FAULT_TOLERANCE.md  OUTBOX_IMPROVEMENTS.md  PR25_FIX_REPORT.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  RAILWAY_MONITORING_SETUP.md  README.md  README_SEAORM.md  SANDBOX_INTEGRATION_TESTS.md  SESSION_PROCESSING_FIX.md  SETUP_LOCAL.md  build.rs  docker-compose.yml  entrypoint.sh  flake.nix  prometheus-railway.yml  prometheus.yml  result  run_fix.py  test_build.sh
.github/workflows/: ci-cd.yml  generate-rust-sdk.yml  generate-sandbox-rust-sdk.yml  integration-tests.yml  publish-sdk.yml
agent-sandbox-sdk/: Cargo.toml  README.md  build.rs  default.nix  openapi.json
agent-sandbox-sdk/src/: lib.rs
docs/: UI_STATUS_STATE_MACHINE.md  docker-tools.md
docs/plans/: 2025-11-03-cargo-workspace-sdk-integration-design.md  2025-11-03-cargo-workspace-sdk-integration.md  2025-11-03-claude-code-execution-design.md
keycloak/: configure-github.sh  oauth2-realm.json  oauth2-realm.json.bak
migration/: Cargo.toml
migration/src/: lib.rs  m20250102_000001_create_session_table.rs  m20250103_000001_add_title_to_session.rs  m20250104_000001_add_session_status_to_session.rs  m20250105_000001_add_timestamp_fields.rs  m20250106_000001_add_git_fields_to_session.rs  m20251103_000001_add_user_id_to_sessions.rs  m20251104_000001_add_github_token_to_sessions.rs  m20251106_000001_create_prompt_table.rs  m20251106_000002_create_message_table.rs  m20251106_000003_drop_messages_from_session.rs  m20251106_000004_add_inbox_status_to_prompt.rs  m20251106_000005_drop_inbox_status_from_session.rs  m20251107_000001_add_status_message_to_session.rs  m20251107_000002_add_processing_tracking_to_prompt.rs  m20251107_000002_create_dead_letter_queue_table.rs  m20251107_000003_add_ip_return_retry_count_to_session.rs  m20251107_000004_add_ui_status_to_session.rs  m20251107_000005_drop_session_status_fields.rs  m20251108_000001_drop_inbox_status_from_prompt.rs  m20251111_000001_add_cancellation_to_session.rs  m20251111_000002_add_process_pid_to_session.rs  m20251115_000001_create_session_repositories_table.rs  m20251116_000001_add_repos_to_session.rs
prompts/: outbox_handler_system_prompt.md
scripts/: test_crud.sh  test_sandbox_integration.sh
sdk/: README.md  package.json
src/: db.rs  error.rs  lib.rs  main.rs  store.rs
src/auth/: guard.rs  jwks.rs  keycloak_client.rs  mod.rs
src/bg_tasks/: cancellation_enforcer.rs  ip_return_poller.rs  ip_returner.rs  mod.rs  outbox_publisher.rs  outbox_publisher_backup.rs  prompt_poller.rs  session_handler.rs  session_poller.rs
src/entities/: dead_letter_queue.rs  message.rs  mod.rs  prompt.rs  session.rs  session_repository.rs
src/handlers/: dead_letter_queue.rs  github.rs  health.rs  items.rs  messages.rs  metrics.rs  mod.rs  prompts.rs  sessions.rs  webhooks.rs
src/services/: anthropic.rs  dead_letter_queue.rs  mod.rs
src/snapshots/: rust_redis_webserver__tests__openapi_spec_snapshot.snap  rust_redis_webserver__tests__openapi_spec_snapshot.snap.new
tests/: README.md  README_CANCELLATION_TESTS.md  cancellable_tasks_integration_test.rs  cancellation_integration_test.rs  dlq_integration_test.rs  outbox_publisher_test.rs  sandbox_integration_test.rs  sdk_smoke_test.rs
