[package]
name = "rust-redis-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
redis = "0.23.0"
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rocket_okapi = { version = "0.8.0", features = [ "swagger", "rapidoc" ] }
schemars = { version = "0.8" }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
migration = { path = "migration" }

# Pin base64ct to avoid edition 2024 requirement (not yet stable in Rust 1.84)
[dependencies.base64ct]
version = "=1.6.0"

[dependencies.home]
version = "=0.5.9"

# Pin regex to avoid compatibility issues with sea-orm-cli in Rust 1.84
[dependencies.regex]
version = "=1.10.6"
