[package]
name = "rust-redis-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
redis = { version = "0.25.4", features = ["aio", "tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rocket_okapi = { version = "0.8.0", features = [ "swagger", "rapidoc" ] }
rocket_cors = "0.6.0"
schemars = { version = "0.8" }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
migration = { path = "migration" }
clap = { version = "4.5", features = ["derive"] }
apalis = { version = "0.5", features = ["tokio-comp", "prometheus"] }
apalis-redis = "0.5"
apalis-sql = { version = "0.5", features = ["postgres"] }
prometheus = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
ip-allocator-client = "0.1.1"
sandbox-client = { path = "agent-sandbox-sdk" }
tempfile = "3.8"

# Pin base64ct to avoid edition 2024 requirement (not yet stable in Rust 1.84)
[dependencies.base64ct]
version = "=1.6.0"

[dependencies.home]
version = "=0.5.9"

# Pin regex to avoid compatibility issues with sea-orm-cli in Rust 1.84
[dependencies.regex]
version = "=1.10.6"

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
