[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

# Pin home crate to avoid edition 2024 requirement (not yet stable in Rust 1.84)
[dependencies.home]
version = "=0.5.9"
